--- a/Component/MineIndexInfo/MineIndexInfo.wxss
+++ b/Component/MineIndexInfo/MineIndexInfo.wxss
@@ -1,90 +1,78 @@
 .background {
-
   width: 100%;
   height: 10rem;
 }
 
 
 .info {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  height: 6rem;
-  margin-top: -1rem;
+  box-sizing: border-box;
+  padding: 0 .25rem;
+  display: grid;
+  grid-template-columns: 6rem auto;
+  grid-template-rows: 3rem 3rem 2rem  auto;
+  grid-gap: .5rem .5rem;
+  height: 12rem;
   background-color: white;
 }
 
 .avatar {
-  width: 6em;
-  height: 6em;
-  margin: -1em 0 0 0.5em;
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+  box-sizing: border-box;
+  padding: .25rem 0;
 }
 
-image {
-  width: 100%;
-  height: 100%;
-}
-
-.avatar image {
+.avatarImage {
   border-radius: 50%;
 }
 
 .post {
-  height: 50%;
-  width: 65%;
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
   display: flex;
-  flex-direction: row;
 }
 
-.post .box:nth-of-type(2) {
+.post .postItem:nth-of-type(2) {
   border-left: solid rgb(237,237,237);
   border-right: solid rgb(237,237,237);
 }
 
 .edit {
-  height: 1.8em;
-  width: 65%;
-  margin: 0.3em 0 0 0;
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+  height: 2rem;
   color: greenyellow;
-  border: solid 2px greenyellow;
-  border-radius: 0.3em;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  border: solid .125rem greenyellow;
+  text-align: center;
 }
 
-.box {
+.editText {
+  line-height: 1.75rem;
+}
+
+.postItem {
   font-size: small;
   width: 30%;
   margin: 1em 1%;
   text-align: center;
 }
 
-
-.information {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  height: 4.5em;
-}
-
 .nickname {
-  font-size: larger;
+  font-size: 20px;
+  grid-column: 1 / 2;
+  grid-row: 3 / 4;
   text-align: center;
-  display: flex;
-  align-items: center;
-  margin: 0 0.3em;
 }
 
 .sex {
-  display: flex;
-  align-items: center;
+  grid-column: 2 / 3;
+  grid-row: 3 / 4;
 }
 
 .signature {
-  width: 100%;
-  font-size: small;
-  margin: 0 0.5em;
+  grid-column: 1 / 3;
+  grid-row: 4 / 5;
+  font-size: 14px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
